bug fix, add overflow:hidden to main page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,6 +8,10 @@
 body {
   background-color: #ddd;
   font-family: Arial, Helvetica, sans-serif;
+
+  &.main {
+    overflow: hidden;
+  }
 }
 
 .linkReset {
